--- a/templates/landing.html
+++ b/templates/landing.html
@@ -268,7 +268,7 @@
         <a
           href="https://bitcompare.net/learn/stablecoins/how-to-earn-interest-on-stablecoins"
           target="_blank"
-          rel="noopener noreferrer nofollow"
+          rel="noopener noreferrer"
           ><img class="w-187" src="/static/img/about/bitcompare.png"
         /></a>
       </div>
