--- a/templates/team.html
+++ b/templates/team.html
@@ -589,7 +589,7 @@ tech companies") }}{% endblock %} {% block content %} {% with theme_dark=True %}
                   {{ gettext("Data Engineer") }}
                 </div>
                 <div class="bio">
-                  {{ gettext("Jonathan does stuff...") }}
+                  {{ gettext("Before joining Origin, Jonathan worked with several crypto and finance brands, focusing on building data pipelines and automation tools. Prior to that, he helped build a company that provided social media user data to a number of startups and PR firms.") }}
                 </div>
               </div>
             </div>
